--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1 style="text-align:center">Island Adventure</h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
