patch: naming convention

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,13 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <h1 style="text-align:center">Island Adventure</h1>
+    <p style="max-width:400px; margin: 20px auto;">Todo: </p>
+    <ul style="max-width:400px; margin: 20px auto;">
+    	<li>Let user select Island Height and Width.</li>
+    	<li>Show number of filled blocks</li>
+    	<li>Show number of Islands</li>
+    	<li>README</li>
+    </ul>
     <div id="root"></div>
     <!--
       This HTML file is a template.
