patch: wink wink

--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <h1 style="text-align:center">Island Adventure</h1>
-    <p style="max-width:400px; margin: 20px auto;">Todo: </p>
-    <ul style="max-width:400px; margin: 20px auto;">
-    	<li>Show number of Islands</li>
-    	<li>README</li>
-    </ul>
+    <p style="max-width:400px; margin: 20px auto;">Todo: <br>README</p>
     <div id="root"></div>
     <!--
       This HTML file is a template.
